Fix alignment of loading indicator on PLP

--- a/packages/base/components/PLP/PLP.module.css
+++ b/packages/base/components/PLP/PLP.module.css
@@ -34,6 +34,6 @@
 }
 
 .loadingIndicatorContainer {
-    grid-column: 2/3;
+    grid-column: 2/4;
     text-align: center;
 }
